; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_bucket_mark_free.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_bucket_mark_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i64 }

@hashmap_type_info = common dso_local global %struct.TYPE_7__* null, align 8
@DIB_FREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32)* @bucket_mark_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bucket_mark_free(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @bucket_at(%struct.TYPE_6__* %5, i32 %6)
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** @hashmap_type_info, align 8
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @memzero(i32 %7, i32 %14)
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @DIB_FREE, align 4
  %19 = call i32 @bucket_set_dib(%struct.TYPE_6__* %16, i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @memzero(i32, i32) #1

declare dso_local i32 @bucket_at(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @bucket_set_dib(%struct.TYPE_6__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
